ipc/ipdl/test/ipdl/error/PExtendedAttrUnexpectedValue.ipdl
//error: unexpected value for valueless attribute `ManualDealloc'

[ManualDealloc=invalid, ChildProc=any]
async protocol PExtendedAttrUnexpectedValue {
parent:
    async Msg();
};
